--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div class="container">
+    <div class="top-bar">
+    </div>
     <div class="left-bar">
         <div class="photo">
             <img src="./profile-img.jpg" alt="profile photo">
@@ -45,16 +47,16 @@
             <p style="font-size: small;">Designed by <span style="color: #5FBDFF;">Dhruv</span></p>
         </footer>
     </div>
-    <div class="top-page">
+    <div class="top-page pages">
         <h1>Harry</h1> 
         <h2>I'm Freelancer</h2>
     </div>
-    <div class="about-page">
-        <h2>About</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue nulla nunc, nec lobortis libero malesuada a. Suspendisse sapien ipsum.</p>
+    <div class="about-page pages">
+        <h2 class="heading">About</h2>
+        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         <img src="./profile-img.jpg" alt="profile photo" >
-        <h2>UI/UX Designer & Web Developer</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue nulla nunc, nec lobortis libero malesuada a. Suspendisse sapien ipsum.</p>
+        <h2 class="sub-heading">UI/UX Designer & Web Developer</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         <div class="about-page-inside">
             <div>
                 <h3><svg xmlns="http://www.w3.org/2000/svg" height="16" width="10" viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg>
@@ -87,69 +89,171 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin velit libero, fringilla nec rhoncus ac, venenatis imperdiet diam. Aliquam dictum ante eget efficitur malesuada. Fusce interdum eleifend nulla nec volutpat. Nulla in vestibulum eros, eu lobortis risus. Etiam massa tellus, fermentum a metus laoreet, vulputate porttitor mi. Fusce condimentum venenatis lorem, et ultricies magna pharetra non. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam finibus arcu dignissim diam laoreet dictum. Donec leo neque, suscipit tempus auctor eget, aliquet eu mauris. Quisque euismod eget erat mollis commodo. Fusce bibendum rhoncus ex ultricies suscipit. Sed facilisis.
         </p>
     </div>
-    <div class="facts">
-        <h2>Facts</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi at quam tempor, condimentum tortor ac, vestibulum magna. Duis a blandit orci. In dolor dui, mollis vel odio id, pulvinar semper.</p>
+    <div class="facts pages">
+        <h2 class="heading">Facts</h2>
+        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         <div>
         <div>
-            <h3><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-emoji-smile-fill" viewBox="0 0 16 16">
-                <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16M7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5M4.285 9.567a.5.5 0 0 1 .683.183A3.498 3.498 0 0 0 8 11.5a3.498 3.498 0 0 0 3.032-1.75.5.5 0 1 1 .866.5A4.498 4.498 0 0 1 8 12.5a4.498 4.498 0 0 1-3.898-2.25.5.5 0 0 1 .183-.683M10 8c-.552 0-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5S10.552 8 10 8"/>
-              </svg>
-                232</h3>
-            <p><span style="font-weight: bold;">Happy Clients</span></p>
-            <p>akakkakaka</p>
+            <h3><img src="./smile.png" alt="smily face">232</h3>
+            <p><span>Happy Clients</span></p>
+            <p>sit amet, consectetur</p>
         </div>
         <div>
-            <h3><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark" viewBox="0 0 16 16">
-                <path d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5zm-3 0A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5z"/>
-              </svg>
-                521</h3>
-            <p><span style="font-weight: bold;">Projects</span></p>
-            <p>akakkakaka</p>
+            <h3><img src="./essay.png" alt="project photo">521</h3>
+            <p><span>Projects</span></p>
+            <p> consectetur adipiscing elit</p>
         </div>
         <div>
-            <h3><svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M256 80C149.9 80 62.4 159.4 49.6 262c9.4-3.8 19.6-6 30.4-6c26.5 0 48 21.5 48 48V432c0 26.5-21.5 48-48 48c-44.2 0-80-35.8-80-80V384 336 288C0 146.6 114.6 32 256 32s256 114.6 256 256v48 48 16c0 44.2-35.8 80-80 80c-26.5 0-48-21.5-48-48V304c0-26.5 21.5-48 48-48c10.8 0 21 2.1 30.4 6C449.6 159.4 362.1 80 256 80z"/></svg>
-                1453</h3>
-            <p><span style="font-weight: bold;">Hours of support</span></p>
-            <p>akakkakaka</p>
+            <h3><img src="./support.png" alt="support" >1453</h3>
+            <p><span>Hours of support</span></p>
+            <p>Lorem ipsum dolor </p>
         </div>
         <div>
-            <h3><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
-                <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664z"/>
-              </svg>
-                32</h3>
-            <p><span style="font-weight: bold;">Hard Workers</span></p>
-            <p>akakkakaka</p>
+            <h3><img src="./icons8-person-64.png" alt="person photo" >32</h3>
+            <p><span>Hard Workers</span></p>
+            <p>Quisque sit.</p>
         </div>
         </div>
         
     </div>
-    <div class="skills">
-        <h2>Skills</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue nulla nunc, nec lobortis libero malesuada a. Suspendisse sapien ipsum.</p>
+    <div class="skills pages">
+        <h2 class="heading">Skills</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue nulla nunc, nec lobortis libero malesuada a. Suspendisse sapien ipsumLorem ipsum dolor sit amet, consectetur adipiscing elit. Nam placerat vulputate quam. Nam risus tortor, tempus sed ultrices et, porta.</p>
         <div class="about-skills">
             <div>
                 <h3>HTML</h3>
-                <progress value ="100" max="100"></progress>
+                <div class="skill-bar-div">
+                    <div class="skill-bar-small-div" style="width: 100%;"></div>
+                </div>
                 <h3>CSS</h3>
-                <progress value ="90" max="100"></progress>
+                <div class="skill-bar-div">
+                    <div class="skill-bar-small-div" style="width: 90%;"></div>
+                </div>
                 <h3>JAVASCRIPT</h3>
-                <progress value ="75" max="100"></progress>
+                <div class="skill-bar-div">
+                    <div class="skill-bar-small-div" style="width: 75%;"></div>
+                </div>
             </div>
             <div>
                 <h3>PHP</h3>
-                <progress value ="80" max="100"></progress>
+                <div class="skill-bar-div">
+                    <div class="skill-bar-small-div" style="width: 80%;"></div>
+                </div>
                 <h3>WORDPRESS/CMS</h3>
-                <progress value ="90" max="100"></progress>
+                <div class="skill-bar-div">
+                    <div class="skill-bar-small-div" style="width: 90%;"></div>
+                </div>
                 <h3>PHOTOSHOP</h3>
-                <progress value ="55" max="100"></progress>
+                <div class="skill-bar-div">
+                    <div class="skill-bar-small-div" style="width: 55%;"></div>
+                </div>
             </div>
         </div>
     </div>
-    <div class="services">
-        <h2>Services</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tristique scelerisque scelerisque. Aliquam lacinia augue sit amet venenatis commodo. Integer vulputate ipsum quis nunc auctor, a hendrerit erat posuere. Nulla facilisi. Pellentesque porttitor tortor dolor, a gravida magna rhoncus non. In hac habitasse platea dictumst. Proin tortor eros, congue eu.</p>
-        
+    <div class="resume pages">
+        <h2 class="heading">Resume</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus diam eros, at dignissim magna accumsan nec. Integer eget sapien et dui efficitur tincidunt non eu risus. Etiam tincidunt magna.</p>
+        <div>
+            <div>
+                <h2>Summary</h2>
+                <h3 class="capital"><img src="./new-moon.png" height="15">Harry</h3>
+                <div>
+                    <div class="line" style="height: 150px;"></div>
+                    <div>
+                        <p class="cursive">Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</p>
+                        <ul>
+                            <li>Portland par 127,Orlando, FL</li>
+                            <li>(123) 456-7891</li>
+                            <li>alice.barkley@example.com</li>
+                        </ul>
+                    </div>
+                </div>
+                <h2>Education</h2>
+                <h3 class="capital"><img src="./new-moon.png" height="15">Master of fine arts & graphic design</h3>
+                <div>
+                    <div class="line" style="height: 320px;"></div>
+                    <div>
+                        <div class="year-div">2015 - 2016</div>
+                        <p class="cursive">Rochester Institute of Technology, Rochester, NY</p>
+                        <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+                        <h3 class="capital">Bachelor of fine arts & graphic design</h3>
+                        <div class="year-div">2010 - 2014</div>
+                        <p class="cursive">Rochester Institute of Technology, Rochester, NY</p>
+                        <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+                        </div>
+                    </div>
+                </div>
+            <div>
+                <h2>Professional Experience</h2>
+                <h3 class="capital"><img src="./new-moon.png" height="15">Senior graphic design specialist</h3>
+                <div>
+                    <div class="line" style="height: 580px;"></div>
+                    <div>
+                        <div class="year-div">2019 - Present</div>
+                        <p class="cursive">Experion, New York, NY</p>
+                        <ul>
+                            <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
+                            <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project.</li>
+                            <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
+                            <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                        </ul>
+                        <h3 class="capital">graphic design specialist</h3>
+                        <div class="year-div">2017 - 2018</div>
+                        <p class="cursive">Stepping Stone Advertising, New York, NY</p>
+                        <ul>
+                            <li>Developed numerous marketing programs (logos, brochures, infographics, presentations, and advertisements).</li>
+                            <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
+                            <li>Recommended and consulted with clients on the most appropriate graphic design</li>
+                            <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio pages">
+        <h2 class="heading">Portfolio</h2>
+        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <div id="portfolio-icons">
+            <span>ALL</span>
+            <span>APP</span>
+            <span>CARD</span>
+            <span>WEB</span>
+        </div>
+        <div id="portfolio-grid">
+            <div><img src="./portfolio-1.jpg"></div>
+            <div><img src="./portfolio-2.jpg"></div>
+            <div><img src="./portfolio-3.jpg"></div>
+            <div><img src="./portfolio-4.jpg"></div>
+            <div><img src="./portfolio-5.jpg"></div>
+            <div><img src="./portfolio-6.jpg"></div>
+        </div>
+    </div>
+    <div class="contact pages">
+        <h2 class="heading">Contact</h2>
+        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officis commodi quidem hic quas.</p>
+        <div id="contact-divs">
+            <div class="contact-inside">
+                <h2><img src="./gps.png">Location:</h2>
+                <p>A108 Adam Street, New York, NY 535022</p>
+                <h2><img src="./email.png">Email:</h2>
+                <p>info@example.com</p>
+                <h2><img src="./phone-call-icon.png">Call:</h2>
+                <p>+1 5589 55488 55s</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.3614644911563!2d-74.0061377!3d40.710058599999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sin!4v1701608132483!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="contact-inside">
+                <h3>Your Name</h3>
+                <input>
+                <h3>Your Email</h3>
+                <input>
+                <h3>Subject</h3>
+                <input>
+                <h3>Message</h3>
+                <textarea></textarea><br/>
+                <button>Send Message</button>
+            </div>
+        </div>
     </div>
     </div>
 </body>
